# rusty-poker

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  rustfmt.toml
cli_basic/: Cargo.toml
cli_basic/src/: main.rs  terminal_player.rs
cli_ui/: Cargo.toml
cli_ui/src/: main.rs  ui.rs
cli_ui/src/ui/: actions.rs  render.rs
cli_ui/src/ui/render/: card.rs  seat.rs
core/: Cargo.toml
core/src/: card.rs  deck.rs  evaluator.rs  game.rs  lib.rs  player.rs
core/src/card/: tests.rs
core/src/deck/: tests.rs
core/src/evaluator/: ck_perfect_hash.rs  preflop_tables.rs  test_helpers.rs  tests.rs  two_plus_two.rs  types.rs
core/src/evaluator/ck_perfect_hash/: tables.rs  tests.rs
core/src/evaluator/two_plus_two/: tests.rs
core/src/game/: betting_round.rs  tests.rs
core/src/player/: basic_player.rs  calling_player.rs  types.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
src/: card.rs  deck.rs  evaluator.rs  game.rs  hand.rs  lib.rs  main.rs  player.rs
src/card/: tests.rs
src/deck/: tests.rs
src/evaluator/: ck_perfect_hash.rs  preflop_tables.rs  test_helpers.rs  tests.rs  two_plus_two.rs  types.rs
src/evaluator/ck_perfect_hash/: tables.rs  tests.rs
src/evaluator/two_plus_two/: tests.rs
src/game/: betting_round.rs  tests.rs
src/game/betting_round/: tests.rs
src/hand/: tests.rs
src/player/: basic_player.rs  calling_player.rs  terminal_player.rs
web/: Cargo.toml
web/src/: lib.rs
web/www/: index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
web/www/src/: bootstrap.ts  index.ts
(+2 files in other folders)
