[package]
name = "rusty_poker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
strum = "0.24"
strum_macros = "0.24"
rand = "0.8.5"
byteorder = "1.4.3"
text_io = "0.1.10"

[dev-dependencies]
ntest = "0.7.2"
